--- a/css/responsive.css
+++ b/css/responsive.css
@@ -68,11 +68,11 @@
     width: 100%;
   }
   .img-comp-img.img-comp-overlay{
-    width: 138px ;
+    width: 138px !important;
   }
   .img-comp-slider {
     top: 70px !important;
-        left: 115px;
+        left: 115px !important;
     }
     .sec-a-b-img {
       width: 270px;
@@ -82,6 +82,65 @@
       margin-bottom: -48px;
       padding-bottom: 83px;
   }
+  .sec-merg-pad {
+    padding: 255px 0px 0px 0px;
+}
+.sec-mar-mee {
+  margin-top: 0px !important;
+}
+.sec-man-img {
+  width: 100%;
+  text-align: center;
+  margin: auto;
+}
+.sec-hellop-p {
+  font-size: 20px;
+  padding-top: 50px;
+}
+.sec-man-hh {
+  font-size: 30px;
+}
+.sec-maan-pp {
+  font-size: 18px;
+  line-height: 28px;
+}
+.sec-count-bgg {
+  height: auto;
+}
+.count-title {
+  font-size: 40px;
+  text-align: center;
+}
+.count-text{
+  text-align: center;
+}
+.sec-recv-padd {
+  padding: 0px 0px;
+}
+.secsuvb-bg {
+  padding: 10px;
+  margin: 0px 12px;
+}
+.sec-sub-h {
+  font-size: 27px;
+  text-align: center;
+}
+br {
+  display: none;
+}
+.sec-sub-p {
+  font-size: 16px;
+  text-align: center;
+}
+input#exampleInputEmail1 {
+  height: 45px;
+}
+.secsub-ntn {
+  height: 45px;
+  width: 55px;
+  margin-left: 150px;
+  margin-top: -72px;
+}
 }
 
 @media screen and (max-height: 450px) {
