--- a/css/responsive.css
+++ b/css/responsive.css
@@ -81,6 +81,7 @@
     .sec-serv-bg {
       margin-bottom: -48px;
       padding-bottom: 83px;
+      padding: 0px;
   }
   .sec-merg-pad {
     padding: 255px 0px 0px 0px;
