--- a/css/style.css
+++ b/css/style.css
@@ -198,11 +198,15 @@
     font-style: normal;
     font-weight: 700;
     line-height: 120%;
-    padding-top: 150px;
+    padding-top: 75px;
 }
 
 .sec-man-img {
     width: 70%;
+}
+.imgstyle{
+border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px #dddddd;
 }
 
 .sec-man-hh {
@@ -478,5 +482,5 @@ line-height: 33.5px;
     .secvie-bgg{
         height: auto;
     }
-    
+
 }
