--- a/css/style.css
+++ b/css/style.css
@@ -496,23 +496,100 @@ line-height: 33.5px;
 }
 
 
-figure { 
+.figu-1 { 
   position: absolute;
-	background-image: url(../images/slider-before.jpg);
+	background-image: url(../images/slider1-after.png);
 	background-size: cover;
 	font-size: 0;
 	width: 100%;
 	height: 100%;
 	margin: 0; 
 }
-
-#divisor , #div2  , #div3{ 
-	background-image: url(../images/slider-after.jpg);
+.figu-2 { 
+    position: absolute;
+      background-image: url(../images/slider2-after.png);
+      background-size: cover;
+      font-size: 0;
+      width: 100%;
+      height: 100%;
+      margin: 0; 
+  }
+  .figu-3 { 
+    position: absolute;
+      background-image: url(../images/slider3-after.png);
+      background-size: cover;
+      font-size: 0;
+      width: 100%;
+      height: 100%;
+      margin: 0; 
+  }
+#div2  { 
+	background-image: url(../images/slider2-before.png);
 	background-size: cover;
 	position: absolute;
 	width: 50%; 
 	box-shadow: 0 5px 10px -2px rgba(0,0,0,0.3);
 	bottom: 0; height: 100%;
+
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      right: -2px;
+      width: 4px;
+      height: calc(50% - 25px);
+      background: white;
+      z-index: 3;
+    }
+    &::before {
+      top: 0;
+      box-shadow: 0 -3px 8px 1px rgba(0,0,0,.3);
+    }
+    &::after {
+      bottom: 0;
+      box-shadow: 0 3px 8px 1px rgba(0,0,0,.3);
+    }
+}
+
+#div3{ 
+	background-image: url(../images/slider3-before.png);
+	background-size: cover;
+	position: absolute;
+	width: 50%; 
+	box-shadow: 0 5px 10px -2px rgba(0,0,0,0.3);
+	bottom: 0; height: 100%;
+    
+  
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    right: -2px;
+    width: 4px;
+    height: calc(50% - 25px);
+    background: white;
+    z-index: 3;
+  }
+  &::before {
+    top: 0;
+    box-shadow: 0 -3px 8px 1px rgba(0,0,0,.3);
+  }
+  &::after {
+    bottom: 0;
+    box-shadow: 0 3px 8px 1px rgba(0,0,0,.3);
+  }
+}
+
+
+#divisor { 
+	background-image: url(../images/slider1-before.png);
+	background-size: cover;
+	position: absolute;
+	width: 50%; 
+	box-shadow: 0 5px 10px -2px rgba(0,0,0,0.3);
+	bottom: 0; height: 100%;
+    
   
   &::before,
   &::after {
